# nornir_rich

./: .gitignore  README.md  TODO  pyproject.toml  results.html  setup.cfg
docs/doctrees/: environment.pickle  index.doctree
docs/doctrees/api/: functions.doctree  index.doctree  processors.doctree  tasks.doctree
docs/doctrees/nbsphinx/tutorials/: nornir_rich.ipynb
docs/doctrees/tutorials/: index.doctree  nornir_rich.doctree
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_sources/api/: functions.rst.txt  processors.rst.txt  tasks.rst.txt
docs/html/_sources/tutorials/: nornir_rich.ipynb.txt
docs/html/api/: functions.html  index.html  processors.html  tasks.html
docs/html/tutorials/: index.html  nornir_rich.html  nornir_rich.ipynb
docs/source/: conf.py  index.rst
docs/source/api/: functions.rst
docs/source/tutorials/: nornir_rich.ipynb
docs/source/tutorials/inventory/: hosts.yaml  router.diff  test.diff  test.xml  test.yaml
nornir_rich/plugins/cli/: nornir_cli.py
nornir_rich/plugins/functions/: __init__.py  rich_result.py
nornir_rich/plugins/processors/: __init__.py  custom_theme.py  default_theme.py  highlighter.py  progress_bar.py  rich_results.py
tests/: conftest.py  hosts.yaml  results.html  test-failed.py  test.py  test_nornir_rich.py  vyos-test.py
tests/test_data/: config.yaml  hosts.yaml  router.config  shell.out  test.diff  test.json  test.xml  test2.xml
