[tool.poetry]
name = "nornir_rich"
version = "0.1.0"
description = "Nornir results printer using "
authors = ["Patrick Avery <patrickdaj@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
nornir = {version = "^3.0.0-beta.1", allow-prereleases = true}
rich = "^6.0.0"
lxml = "^4.5.2"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.3"
black = { version = "19.10b0", allow-prereleases = true }
mypy = "*"
pylama = "^7.7.1"
pytest = "*"
nbval = "*"
jupyter = "^1"
sphinx = "^3.0.3"
sphinxcontrib-napoleon = "^0.7"
nbsphinx = "^0.6.1"
sphinx-issues = "^1.2.0"
sphinx_rtd_theme = "^0.4.3"
nornir_napalm = "^0.1.1"
napalm-vyos = "^0.2.0"
python-dotenv = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
